[package]
name = "Key-Value-Store-Assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
tokio = {version = "1.44.1", features = ["full"]}
dashmap = "5"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.140"
sys-info = "0.9.1"
hyper = { version = "0.14" , features = ["full"] }
lru = "0.13.0"
bytes = "1.10.1"
simd-json = { version = "0.9", features = ["allow-non-simd"] }
fxhash = "0.2.1"
urlencoding = "2.1.3"
socket2 = "0.5.8"
tokio-stream = "0.1.17"
io-uring = { version = "0.7.4"}