[package]
name = "rust-server"  # This is your package name
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
dashmap = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "1", features = ["full"] }
mio = "1.0.3"
bytes = "1.10.1"
lru = "0.13.0"
